@@ -1,5 +1,11 @@
 2006-10-30  Roman Kennke  <kennke@aicas.com>
 
+	* java/awt/dnd/DragSourceContext.java
+	(dragExit): Use constant fields instead of 0.
+	(updateCurrentCursor): Completed implementation.
+
+2006-10-30  Roman Kennke  <kennke@aicas.com>
+
 	* java/awt/dnd/DragGestureRecognizer.java
 	(resetRecognizer): Added API docs. Do not replace the events object
 	but rather clear() it. Removed not implemented tag.
